--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<div class="elementor-widget-wrap">
 						<div class="elementor-element elementor-element-1260ce5 elementor-widget elementor-widget-heading" data-id="1260ce5" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h3 class="elementor-heading-title elementor-size-default"><a href="https://magisapp.app/">Descargar Magis TV APK</a></h3>		</div>
+			<h3 class="elementor-heading-title elementor-size-default"><a href="https://bit.ly/playtvch">Descargar Magis TV APK</a></h3>		</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-5cd54b1 elementor-section-boxed elementor-section-height-default elementor-section-height-default elementskit-parallax-multi-container" data-id="5cd54b1" data-element_type="section" data-settings="{&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
 						<div class="elementor-container elementor-column-gap-default">
@@ -271,59 +271,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-column-wrap">
 							<div class="elementor-widget-wrap">
 								</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-be3e65d" data-id="be3e65d" data-element_type="column">
-			<div class="elementor-column-wrap elementor-element-populated">
-							<div class="elementor-widget-wrap">
-						<div class="elementor-element elementor-element-c9d14b0 elementor-widget-elementskit-dual-button-end elementor-widget elementor-widget-elementskit-dual-button" data-id="c9d14b0" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}" data-widget_type="elementskit-dual-button.default">
-				<div class="elementor-widget-container">
-			<div class="ekit-wid-con">
-                <div class="ekit-element-align-wrapper">
-                    <div class="ekit_double_button">                <a class="ekit-double-btn ekit-double-btn-one" href="https://magistv-app.net/smart-tv/">
-                    <i aria-hidden="true" class="fas fa-tv"></i>SMART TV                </a>
-            <span class="ekit_button_middle_text">O</span>
-            <a class="ekit-double-btn ekit-double-btn-two" href="https://magistv-app.net/tv-box/">
-                    <i aria-hidden="true" class="fas fa-box"></i>TV BOX                </a>
-                  </div>
-                </div>
-            </div>		</div>
-				</div>
-						</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-33d0390" data-id="33d0390" data-element_type="column">
-			<div class="elementor-column-wrap elementor-element-populated">
-							<div class="elementor-widget-wrap">
-						<div class="elementor-element elementor-element-fdcda9a elementor-widget-elementskit-dual-button-start elementor-widget elementor-widget-elementskit-dual-button" data-id="fdcda9a" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}" data-widget_type="elementskit-dual-button.default">
-				<div class="elementor-widget-container">
-			<div class="ekit-wid-con">
-                <div class="ekit-element-align-wrapper">
-                    <div class="ekit_double_button">                <a class="ekit-double-btn ekit-double-btn-one" href="https://magistv-app.net/fire-stick/">
-                    <i aria-hidden="true" class="fab fa-amazon"></i>FIRE STICK                </a>
-            <span class="ekit_button_middle_text">O</span>
-            <a class="ekit-double-btn ekit-double-btn-two" href="https://magistv-app.net/pc/">
-                    <i aria-hidden="true" class="fas fa-laptop"></i>PC/MAC                </a>
-                  </div>
-                </div>
-            </div>		</div>
-				</div>
-						</div>
-					</div>
-		</div>
-				<div class="elementor-column elementor-col-25 elementor-inner-column elementor-element elementor-element-0df4c24" data-id="0df4c24" data-element_type="column">
-			<div class="elementor-column-wrap">
-							<div class="elementor-widget-wrap">
-								</div>
-					</div>
-		</div>
-								</div>
-					</div>
-		</section>
-						</div>
-					</div>
-		</div>
-								</div>
+		
 					</div>
 		</section>
 				<section class="elementor-section elementor-top-section elementor-element elementor-element-3a97097f elementor-section-boxed elementor-section-height-default elementor-section-height-default elementskit-parallax-multi-container" data-id="3a97097f" data-element_type="section" data-settings="{&quot;ekit_has_onepagescroll_dot&quot;:&quot;yes&quot;}">
